# karlsruhe_trash_crawler

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  devenv.nix  pyproject.toml  schema.graphql
.github/workflows/: main.yml
muell/: __init__.py  config.py  main.py
tests/: Karlsruhe_ Entsorgungstermine.html  no_real_test.py
