[tool.poetry]
name = "muell"
version = "1.1.0"
description = "Queries the Karlsruhe trash schedule for a specific Street."
authors = ["Maximilian Staab <maximilian.staab.de@gmail.com>"]

[tool.poetry.scripts]
trash-dates = "muell.main:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
bs4 = "^0.0.1"
arrow = "^1.0.3"
psycopg2-binary = "^2.8.6"
click = "^7.1.2"
aiopg = "^1.2.1"
aiohttp = "^3.7.4"
Quart = "^0.15.1"
hypercorn = "^0.13.2"
Jinja2 = "<3.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.6"
pytest = "^6.2.3"
requests-mock = "^1.9.2"
aiounittest = "^1.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

